changes in index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<title>Новостное агентство</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
