--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</select>
 						
 					  </label>
-					<img src="./img/down-arrow.png" alt="" srcset="" class="town-image">
+					<img src="./img/down-arrow.png" alt="стрелочка" srcset="" class="town-image">
 				</div>
 			</div>
 			<div class="header-center">
@@ -35,12 +35,12 @@
 			</div>
 			<div class="header-right">
 				<div class="weather">
-					<img src="./img/cloudy.png" alt="" class="weather-image">
+					<img src="./img/cloudy.png" alt="погода" class="weather-image">
 					<div class="weather-tem">+22&#176;C</div>
 				</div>
 				<form action="" class="search">
 					<input type="search" placeholder="Поиск по сайту">
-					<img src="./img/search.png" alt="" class="search-image">
+					<img src="./img/search.png" alt="лупа" class="search-image">
 				</form>
 			</div>
 		</div>
@@ -146,7 +146,7 @@
 				</article>
 				<section>
 					<figure class="small-news">
-						<img src="./img/Layer_3.png" alt="">
+						<img src="./img/Layer_3.png" alt="Навальный">
 						<figcaption>Алексей Навальный объявил акцию против пенсионной реформы 1 июля</figcaption>
 						<div class="extra-line">
 							<div class="news-item-props">
@@ -157,7 +157,7 @@
 						</div>
 					</figure>
 					<figure class="small-news">
-						<img src="./img/Layer_4.png" alt="">
+						<img src="./img/Layer_4.png" alt="Паспорт">
 						<figcaption>Дума увеличила пошлины
 							за выдачу загранпаспортов
 							и водительских прав</figcaption>
@@ -172,7 +172,7 @@
 				</section>
 				<section>
 					<figure class="small-news">
-						<img src="./img/Layer_5.png" alt="">
+						<img src="./img/Layer_5.png" alt="Стриминг">
 						<figcaption>В России заработал
 							стриминговый сервис
 							YouTube</figcaption>
@@ -185,7 +185,7 @@
 						</div>
 					</figure>
 					<figure class="small-news">
-						<img src="./img/Layer_6.png" alt="">
+						<img src="./img/Layer_6.png" alt="ЧМ-2018">
 						<figcaption>Кейн признан лучшим
 							игроком матча ЧМ-2018
 							Тунис — Англия</figcaption>
@@ -286,17 +286,17 @@
 				</div>
 				<div class="footer-right">
 					<div>
-						<a href="#" class="social-media"><img src="./img/vk.png" alt=""></a>
-						<a href="#" class="social-media"><img src="./img/fb.png" alt=""></a>
-						<a href="#" class="social-media"><img src="./img/tw.png" alt=""></a>
-						<a href="#" class="social-media"><img src="./img/inst.png" alt=""></a>
+						<a href="#" class="social-media"><img src="./img/vk.png" alt="вконтакте"></a>
+						<a href="#" class="social-media"><img src="./img/fb.png" alt="фейсбук"></a>
+						<a href="#" class="social-media"><img src="./img/tw.png" alt="твитер"></a>
+						<a href="#" class="social-media"><img src="./img/inst.png" alt="инстаграм"></a>
 					</div>
 					<div class="info">
-						<img src="./img/call-answer.png" alt="">
+						<img src="./img/call-answer.png" alt="телефон">
 						<a href="tel:+7 (499) 995-55-55">+7 (499) 995-55-55</a>
 					</div>
 					<div class="info">
-						<img src="./img/envelope.png" alt="">
+						<img src="./img/envelope.png" alt="почта">
 						info@agency.ru
 					</div>
 				</div>
